preventing overflow

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body{
   color: #ccc;
   margin: 0;
-  min-height: 100vh;
-  width: 100vh;
-  height: 100vh;
+  min-height, max-height: 100vh!important;
+  width, height: 100vh;
+  overflow: auto!important;
 }
 
 .container {
